--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,21 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # All Layers
+  get_it: ^7.2.0
+  logger: ^1.1.0
+  dartz: 0.10.1
+  provider: ^6.0.5
+
+  # Data Layers
+  retrofit: ^3.3.1
+  dio: ^4.0.6
+  http: ^0.13.5
+
+  # Presentation Layers
+  shimmer: ^2.0.0
+  cached_network_image: ^3.2.3
+  flutter_svg: ^2.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +54,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+  bloc_test: ^9.1.1
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
+  mockito: ^5.0.8
+  mocktail: 0.3.0
+  retrofit_generator: ^4.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,9 +82,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,17 +96,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.otf
+        - asset: fonts/Poppins-Medium.otf
+          weight: 500
+        - asset: fonts/Poppins-SemiBold.otf
+          weight: 600
+        - asset: fonts/Poppins-Bold.otf
+          weight: 700
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
