--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,17 @@ dependencies:
   logger: ^1.1.0
   dartz: 0.10.1
   provider: ^6.0.5
+  equatable: ^2.0.5
 
   # Data Layers
   retrofit: ^3.3.1
   dio: ^4.0.6
+  awesome_dio_interceptor: 0.0.2+4
   http: ^0.13.5
 
   # Presentation Layers
+  flutter_bloc: ^8.1.1
+  bloc: ^8.1.0
   shimmer: ^2.0.0
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.0+1
