--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.0+1
   webview_flutter: ^4.0.2
+  webview_flutter_platform_interface: ^2.0.1
 
 dev_dependencies:
   flutter_test:
